--- a/iot1_sql/src/main/webapp/WEB-INF/web.xml
+++ b/iot1_sql/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,9 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+	<listener>
+		<listener-class>com.iot1.sql.common.utils.SessionListener</listener-class>
+	</listener>
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
@@ -29,5 +31,7 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+	<session-config>
+	    <session-timeout>1</session-timeout>
+	</session-config>
 </web-app>
